--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+body {
+    max-width: 100%;
+}
+
 header {
     height: 475px;
     background-color: #303030;
@@ -99,3 +103,27 @@ button:hover {
     background: #c07212;
     color: #ffffff;
 }
+ @media (max-width: 1170px) {
+    #descricao>div>h2 {
+        margin: 0 100px;
+    }
+    #descricao>div {
+        justify-content: center;
+    }
+ }
+ @media (max-width: 1024px) {
+    section#descricao {
+        flex-direction: column;
+        align-items: center;
+    }
+    #descricao>img {
+        margin: 30px 10px;
+        max-width: 90%;
+    }
+    input {
+        max-width: 90%;
+    }
+    header  {
+        padding: 10px;
+    }
+ }
